--- a/golang的GC机制/2-三色标记法.md
+++ b/golang的GC机制/2-三色标记法.md
@@ -71,8 +71,28 @@
           * 线程切换和上下文转换的消耗会使垃圾回收的总体成本上升，从而降低系统的吞吐量
 ## 读写屏障
 1. 三色标记法的并发问题 
-
-        现有如下对象
 ![avatar](GCRoot.png)         
+        假如在执行三色标记法之前有上面的对象集，则三色标记法的执行过程如下：
+![avatar](流程.png)       
+三色标记法在执行后，堆内存中只剩下了D对象会被当作垃圾清理掉，如果用户在标记执行过程中建立了从A对象到D对象的引用，，那么后续在访问D对象的时候就会出错。这种没有指向合法地址的指针一般被称为野指针。
+2. 读写屏障技术         
 
-        
+        解决三色标记法并发问题的最简单的方法是STW，保证标记过程不会受干扰。另一种思路就是使用赋值器屏障技术，使得赋值器在进行指针写操作时同步垃圾回收器，保证不破坏弱三色不变性  
+
+        屏障技术：      
+          * 内存屏障只是对应一段特殊的代码
+          * 内存屏障这段代码在编译期间生成
+          * 内存屏障本质上在运行期间拦截内存写操作，相当于一个 hook 调用
+        屏障技术包括：          
+          * 插入写屏障
+          * 删除写屏障
+          * 混合写屏障（旁白：其实本质上是两个，混合写屏障就是插入写屏障和删除写屏障的混合）
+          内存屏障本质就是编译器帮你生成了一段hook代码，这三个屏障的本质区别就是hook的时机不同而已。
+
+
+
+
+
+193 : 是什么条件筛选出来的
+下次触发时机命中的用户数以及具体的名单
+事故回顾
