--- a/面试必看/面试&学习方法论.md
+++ b/面试必看/面试&学习方法论.md
@@ -55,7 +55,7 @@
     
 16. 简单谈下 defer 的应用场景及注意事项（关闭文件网络请求等，先进后出）
 
-17. 简单谈下 chan 的应用场景及注意事项
+17. 简单谈下 channel 的应用场景及注意事项
 
 18. 简述进程、线程、协程的含义及区别
 
@@ -68,6 +68,10 @@
 22. 简要描述下变量逃逸
 
 23. 简要描述下 slice 在 append 时发生了什么
+
+24. channel的关闭
+
+25. golang的IO
 
 
 
