--- a/面试必看/面试&学习方法论.md
+++ b/面试必看/面试&学习方法论.md
@@ -17,6 +17,73 @@
 
 
 
+## 普通面试题
+     ACID分别代表什么
+     https://www.cnblogs.com/fjdingsd/p/5273008.html
+
+    数据库有哪些存储引擎？
+    INNODB 与  MYISAM ，其他的也可以了解一下，记住名字即可
+
+    他们索引的存储使用什么数据结构，为什么要使用这种数据结构而不用B树？
+    使用索引进行查询的时候，数据库是怎么查找数据的？
+    https://blog.csdn.net/sjyttkl/article/details/76176836
+
+    可能会让你写一些简单的SQL
+
+    Redis 或者 Memcache
+    数据类型的底层实现，基本操作指令，自行查阅相关面试题
+
+    redis的底层实现（http://zhangtielei.com/posts/blog-redis-dict.html） 1~6都得详细看完
+    redis持久化是怎么做的，简单说明即可
+
+    TCP/IP协议三次握手和四次挥手详细说一下
+    https://www.cnblogs.com/wulala1119/p/4749892.html（最好把图背下来，以及TCP协议的报文结构）
+
+    TIME_WAIT发生在什么时候，为什么要有这个阶段，时间多长，为什么要进行三次握手和四次挥手
+
+    了解TCPDUMP工具
+    了解AWK工具，数据重定向
+
+    把Epoll，select网络模型了解一下
+
+    大量数据处理https://blog.csdn.net/wypersist/article/details/80114709，还有了解一下高并发如何处理
+
+    浏览器输入一个URL，然后发生了什么
+    DNS->浏览器发起连接->http报文->tcp->ip->arp->浏览器渲染（DOM树） 每一步都搞清楚了
+
+    对称加密和非对称加密
+    https://blog.csdn.net/xiaoming100001/article/details/81109617
+
+    HTTP报文具体结构，POST与GET的区别，使用场景    
+
+    HTTP与HTTPS区别
+
+    线程与进程的区别，越详细越好，进程是资源分配的基本单位，那这些资源都是那些，线程ID（ps -eLf可查看 LWP是线程ID）
+
+    同步异步，阻塞非阻塞搞清楚
+
+    把快排和堆排背下来，代码以及画图手动推出来
+
+    常见算法题
+https://leetcode-cn.com/explore/interview/card/top-interview-questions-easy/6/linked-list/42/
+https://leetcode-cn.com/explore/interview/card/top-interview-questions-easy/6/linked-list/43/
+https://leetcode-cn.com/explore/interview/card/top-interview-questions-easy/6/linked-list/44/
+https://leetcode-cn.com/explore/interview/card/top-interview-questions-easy/6/linked-list/46/
+https://leetcode-cn.com/explore/interview/card/top-interview-questions-easy/7/trees/47/
+https://leetcode-cn.com/explore/interview/card/top-interview-questions-easy/7/trees/50/
+https://leetcode-cn.com/explore/interview/card/top-interview-questions-easy/23/dynamic-programming/54/
+https://leetcode-cn.com/explore/interview/card/top-interview-questions-easy/23/dynamic-programming/56/
+动态规划还有  斐波那契 
+把树操作相关的算法题好好总结一下
+
+为什么快排和堆排的时间复杂度一致，但是快排实际情况与堆排快很多
+
+GIT基本操作指令
+
+还会问项目相关的东西，最好自己写的项目每一步都搞清楚，设计题也比较多
+
+
+
 
 
 
