--- a/面试必看/面试题.md
+++ b/面试必看/面试题.md
@@ -67,7 +67,7 @@
 5. 从不存在key的map中取值时，返回的总是"0值"        
 6. 字符串和[]byte之间的转换时复制(有内存耗损)，可以用map[string][]byte建立字符串和[]byte之间的映射，也可range来避免内存分配来提高性能
 7. switch的case默认匹配规则不同于其它语言的是，匹配case条件后默认退出，除非使用fallthrough继续匹配；而其它语言是默认继续匹配，除非使用break退出匹配。
-8. cjannel  
+8. channel  
 
     * 对于无缓存区的channel，写入channel的goroutine会阻塞直到被读取，读取channel的goroutine会阻塞直到有数据写入。
     * 从一个closed状态的channel读取数据是安全的，可通过返回状态（第二个返回参数）判断是否关闭；而向一个closed状态的channel写数据会导致panic。
@@ -623,5 +623,5 @@
     go是内置运行使的编程语言，像这种内置运行时的编程语言通常会抛弃传统的内存分配方式，改为自己管理，这样可以完成类似预分配，内存池等操作，以避开系统调用带来的性能问题，防止每次分配内存都需要系统调用      
 
     golang的内存分配的核心思想：    
-    *   每次从操作系统申请一大块的内存，由golang对这块内存做分配，减少系统调用
+    * 每次从操作系统申请一大块的内存，由golang对这块内存做分配，减少系统调用
     * 内存分配算法采用golang的tcmalloc算法。该算法比较复杂，其核心思想是把内存切分的非常细小。只有在内存闲置过多的时候，才会尝试归还部分内存给操作系统，降低整体的开销
