--- a/面试必看/面试题.md
+++ b/面试必看/面试题.md
@@ -625,3 +625,15 @@
     golang的内存分配的核心思想：    
     * 每次从操作系统申请一大块的内存，由golang对这块内存做分配，减少系统调用
     * 内存分配算法采用golang的tcmalloc算法。该算法比较复杂，其核心思想是把内存切分的非常细小。只有在内存闲置过多的时候，才会尝试归还部分内存给操作系统，降低整体的开销
+    
+    
+30. 获取字符串的长度方法              
+    1. 拉丁字母一个字符只要一个字节，而中文则可能需要两到三个字节，unicode把所有的的字符设置为2个字节，utf-8格式则把所有字符设置为1-3个字节。
+       如果字符串中出现中文字符不能直接调用len函数来统计字符串字符长度，这是因为在go中，字符串是以UTF-8为格式进行存储的，在字符串上调用len函数，取得是字符串包含的byte的个数
+        
+    2. 在包含中文的情况下，需要使用如下方法
+       1） 使用bytes.count() 统计
+       2） 使用strings.count() 统计
+       3） 将字符串转换为[]rune后调用len函数统计
+       4） 使用utf8.RuneCountlnString（）统计
+    
