--- a/redis/底层实现.md
+++ b/redis/底层实现.md
@@ -26,6 +26,13 @@
 
 <!-- /TOC -->
 # DICT
+## dict解释
+1. dict是一个用于维护key和value映射关系的数据结构，与很多语言中的map类似。redis的一个database中所有key和value的映射，就是使用一个dict来维护的，不过这只是他在reids中的一个用途而已
+
+
+2. dict本质上是为了解决算法中的查找问题，一般查找问题的解法有两个大类：一个是基于各种平衡树，一个是基于哈希表。我们平时使用的各种map，大都是居于哈希表实现的。在不要求数据有序存储，且能保持较低的哈希值冲突概率的前提下，基于哈希表的查找性能是非常高效的，接近O(1)，而且实现简单。
+
+3. 在redis中，dict也是一个基于哈希表的算法，和传统的哈希算法类似，他采用某个哈希函数从key计算得到在哈希表中的位置，采用拉链法解决冲突，并在装载因子超过预定值时自动扩展内存，引发重哈希
 ## dict具体实现
 代码实现
 ```golang
