--- a/redis/底层实现.md
+++ b/redis/底层实现.md
@@ -32,7 +32,7 @@
 
 2. dict本质上是为了解决算法中的查找问题，一般查找问题的解法有两个大类：一个是基于各种平衡树，一个是基于哈希表。我们平时使用的各种map，大都是居于哈希表实现的。在不要求数据有序存储，且能保持较低的哈希值冲突概率的前提下，基于哈希表的查找性能是非常高效的，接近O(1)，而且实现简单。
 
-3. 在redis中，dict也是一个基于哈希表的算法，和传统的哈希算法类似，他采用某个哈希函数从key计算得到在哈希表中的位置，采用拉链法解决冲突，并在装载因子超过预定值时自动扩展内存，引发重哈希
+3. 在redis中，dict也是一个基于哈希表的算法，和传统的哈希算法类似，他采用某个哈希函数从key计算得到在哈希表中的位置，采用拉链法解决冲突，并在装载因子超过预定值时自动扩展内存，引发重哈希。redis的dict实现最显著的一个特点，就在于他的重哈希，他采用了一种称为增量式重哈希的方法。 在需要扩展内存时避免一次性对所有的key进行重哈希，而是将重哈希的操作分散到对于dict的各个增删改查的操作中去。这种方法能做到每次只对一小部分key进行重哈希，而每次重哈希之间不影响dict的操作。dict之所以这样设计，是为了避免重哈希期间单个请求的响应时间剧烈增加，这与前面提到的“快速响应时间”的设计原则是相符的。
 ## dict具体实现
 代码实现
 ```golang
@@ -320,6 +320,7 @@ int dictRehash(dict *d, int n) {
 * dictDelete也会触发推进一步重哈希(_dictRehashStep)
 * 如果当前不在重哈希过程中，它只在ht[0]中查找要删除的key，否则两个都找
 * 删除成功后会调用key和value的析构函数
+
 
 # SDS
 ## 构成
