--- a/golang的GC机制/1-什么是垃圾回收.md
+++ b/golang的GC机制/1-什么是垃圾回收.md
@@ -24,7 +24,7 @@
         内存栈：是一种运算受限的线性表
         2. 特点不同
         内存堆：允许程序在运行时动态的申请某个大小的内存空间
-        内存栈；仅在表尾进行插入和删除操作的线性表，这一端被称为栈顶，相对的另一端被称为栈低。
+        内存栈；仅在表尾进行插入和删除操作的线性表，这一端被称为栈顶，相对的另一端被称为栈底。
 
 ## 总结
 了解GC，其实就是了解自动回收堆内存的算法。主流的垃圾回收算法有两种，一种是追踪式垃圾回收算法，另一种是引用计数法。
