--- a/golang常问面试题/面试题.md
+++ b/golang常问面试题/面试题.md
@@ -4,3 +4,11 @@
     new（T） 和make（T，args）是go语言内置的函数，用来分配内存。简单来说new只分配内存，make用于slice、map 和 channel的初始化
     * new会为T类型的新值分配已置零的内存空间，并返回地址指针。即类型为*T的值，换句话说就是返回一个指针，该指针指向新分配的类型为T的零值。适用于值类型，如数组，结构体等
     * make（T，args）返回初始化之后T类型的引用类型本身。make () 只适用于 slice、map 和 channel.
+3. 用过原生的http包吗？     
+golang中http包处理http请求主要更两个东西相关：serverMux和handler
+    * server本质上是个http请求路由器。他把收到的请求与一组预先定义的URL路径列表进行对比， 如果匹配到路径的时候就调用关联的处理器(Handler)
+    * 处理器handler负责输出http响应的头和正文。任何满足。
+4. 什么是服务熔断？ 什么是服务降级？        
+    * 服务熔断  
+        一般是某个服务故障或一场引起的，类似保险丝，当某个异常触发了，直接熔断整个服务，
+    * 服务降级  
