--- a/golang常问面试题/面试题.md
+++ b/golang常问面试题/面试题.md
@@ -12,3 +12,12 @@ golang中http包处理http请求主要更两个东西相关：serverMux和handle
     * 服务熔断  
         一般是某个服务故障或一场引起的，类似保险丝，当某个异常触发了，直接熔断整个服务，
     * 服务降级  
+        服务降级是从整个系统的负荷情况出发和考虑的，为了应对某些场景或者功能出现负载过高或者响应慢的情况，其内部暂时舍弃对一些非核心的接口和数据的请求，而是直接返回衣蛾提前准备好的fallback错误处理信息，这样虽然提供了一个有损的服务，但是却保证了整个系统的稳定性和可用性
+    * 相同点
+        * 目标一致，都是从可用性出和可靠性出发，为了防止系统崩溃
+        * 用户体验类似，最终让用户体验到的是某些功能暂不可使用
+    * 不同点    
+        * 触发原因不同，服务熔断一般是某个下游服务故障引起的，而服务降级是从整体负荷的角度考虑的
+
+5. for和range有什么区别     
+    * range在迭代过程中返回的都是迭代值的拷贝，如果每次迭代的元素的内存占用很小，那么for和range性能几乎一样，例如：[]int。但是如果迭代的元素内存占用较高，例如一个包含很多属性的 struct 结构体，那么for的性能明显降明显高于range
