--- a/golang常问面试题/面试题.md
+++ b/golang常问面试题/面试题.md
@@ -2,8 +2,8 @@
     golang的select就是监听IO操作，当IO操作发生时，触发相应的动作，每个case语句都必须是一个IO操作，确切的说应该是一个面向channel的IO操作
 2. new()和make()的区别是什么    
     new（T） 和make（T，args）是go语言内置的函数，用来分配内存。简单来说new只分配内存，make用于slice、map 和 channel的初始化
-    * new会为T类型的新值分配已置零的内存空间，并返回地址指针。即类型为*T的值，换句话说就是返回一个指针，该指针指向新分配的类型为T的零值。适用于值类型，如数组，结构体等
-    * make（T，args）返回初始化之后T类型的引用类型本身。make () 只适用于 slice、map 和 channel.
+    * new返回的是指向类型的指针。适用于值类型，如数组，结构体等
+    * make（T，args）返回初始化之后该类型的引用类型本身。make () 只适用于 slice、map 和 channel.
 3. 用过原生的http包吗？     
 golang中http包处理http请求主要更两个东西相关：serverMux和handler
     * server本质上是个http请求路由器。他把收到的请求与一组预先定义的URL路径列表进行对比， 如果匹配到路径的时候就调用关联的处理器(Handler)
@@ -21,3 +21,4 @@ golang中http包处理http请求主要更两个东西相关：serverMux和handle
 
 5. for和range有什么区别     
     * range在迭代过程中返回的都是迭代值的拷贝，如果每次迭代的元素的内存占用很小，那么for和range性能几乎一样，例如：[]int。但是如果迭代的元素内存占用较高，例如一个包含很多属性的 struct 结构体，那么for的性能明显降明显高于range
+    * range 在迭代之前就已经计算好了需要迭代的次数，不会因迭代中更改而增加迭代次数
