--- a/mysql/日志.md
+++ b/mysql/日志.md
@@ -25,7 +25,7 @@ binlog日志有三种格式，分别是 STATMENT 、 ROW 和 MIXED 。
 当执行数据发生变更操作时，首先要把数据也加载到内存中，然后在内存中进行更新，更新完成后写入到redo log buffer中，然后由redo log buffer在写入redo log file中。
 
 redo log file记录了xxx页做了xxx修改。所以即使mysql发生了宕机，也可以通过redo log数据恢复，也就是说在内存中更新成功后，即使没有刷新到磁盘中，但也不会因为宕机而导致数据丢失。
-![avatar](redo.png)
+![avatar](image/redo.png)
 
 redolog 采用循环写的方式记录，当写到结尾时，会回到开头循环写日志。如下图
 ### binlog和redo log都可以数据恢复，有什么区别
